# anttec-ia

./: .env.example  .gitignore  config.py  main.py  nixpacks.toml  pyproject.toml  requirements.txt
models/: schemas.py
services/: conversation.py  embeddings.py
